--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "formik": "^1.5.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "^2.1.5"
+    "react-particles-js": "^2.5.1",
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
-    "react-test-renderer": "^16.8.4"
+    "react-test-renderer": "^16.8.4",
+    "tachyons": "^4.11.1"
   }
 }
