Retoques no design

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "https://my-json-server.typicode.com/yojimat/demo/tools",
+  "proxy": "http://localhost:3000",
   "devDependencies": {
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
