--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "VUTTR",
+  "name": "Very Useful Tools To Remember",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Icon-Logo-Bossa.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "orientation": "portrait-primary",
+  "theme_color": "#365DF0",
+  "background_color": "#365DF0"
 }
